--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chat en tiempo real",
   "author": "Juan Carlos Serrano <juancsch@gmail.com>",
   "license": "MIT",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "build-client": "webpack --progress --colors",
     "prestart": "npm i",
