--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "chimp": "^0.40.4",
+    "eslint": "^3.4.0",
+    "eslint-plugin-chai-expect": "^1.1.1",
     "handlebars-loader": "^1.3.0",
     "webpack": "^1.13.1"
   }
