--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
 node_js:
-  - '6.0'
   - '6.1'
+notifications:
+  email:
+    recipients:
+      - juancsch@gmail.com
+    on_success: change
+    on_failure: always
