--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "engines": {
     "node": "6.1.x",
-    "node": "3.10.x"
+    "npm": "3.10.x"
   },
   "dependencies": {
     "async": "^2.0.1",
