--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "uuid": "^2.0.2",
-    "webrtc2images": "^1.4.4"
-  },
-  "devDependencies": {
+    "webrtc2images": "^1.4.4",
+    "webpack": "^1.13.1",
+    "handlebars-loader": "^1.3.0",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2015": "^6.13.2"
+  },
+  "devDependencies": {
     "chimp": "^0.40.4",
     "eslint": "^3.4.0",
-    "eslint-plugin-chai-expect": "^1.1.1",
-    "handlebars-loader": "^1.3.0",
-    "webpack": "^1.13.1"
+    "eslint-plugin-chai-expect": "^1.1.1"
   }
 }
