--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chat en tiempo real",
   "author": "Juan Carlos Serrano <juancsch@gmail.com>",
   "license": "MIT",
-  "main": "app.js",
+  "main": "server/app",
   "scripts": {
     "build-client": "webpack --progress --colors",
     "prestart": "npm i",
@@ -15,10 +15,6 @@
     "posttest": "npm stop",
     "test-watch": "chimp --browser=phantomjs --mocha --path=test --watch",
     "heroku-postbuild": "npm run build-client"
-  },
-  "engines": {
-    "node": "6.1.x",
-    "npm": "3.10.x"
   },
   "dependencies": {
     "async": "^2.0.1",
@@ -35,14 +31,9 @@
     "uuid": "^2.0.2",
     "webrtc2images": "^1.4.4",
     "webpack": "^1.13.1",
-    "handlebars-loader": "^1.3.0",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2"
+    "handlebars-loader": "^1.3.0"
   },
   "devDependencies": {
-    "chimp": "^0.40.4",
-    "eslint": "^3.4.0",
-    "eslint-plugin-chai-expect": "^1.1.1"
+    "standard": "11.0.1"
   }
 }
