--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "main": "server/app",
   "scripts": {
     "build-client": "webpack --progress --colors",
-    "prestart": "npm i",
-    "start": "npm run build-client && PORT=8080 node server/app.js",
+    "start": "npm run build-client && PORT=8080 node server/app.js &",
     "stop": "kill $(lsof -t -i:8080)",
     "pretest": "npm start --silent &",
-    "test": "sleep 10 && chimp --browser=phantomjs --mocha --path=test",
+    "test": "sleep 10 && chimp --browser=phantomjs --mocha --path=test-integration",
     "posttest": "npm stop",
-    "test-watch": "chimp --browser=phantomjs --mocha --path=test --watch",
+    "utest": "mocha --recursive test",
+    "tdd": "npm run utest -- --watch",
     "heroku-postbuild": "npm run build-client"
   },
   "dependencies": {
@@ -24,16 +24,17 @@
     "domify": "^1.4.0",
     "express": "^4.14.0",
     "handlebars": "^4.0.5",
+    "handlebars-loader": "^1.3.0",
     "level": "^1.4.0",
     "level-ttl": "^3.1.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "uuid": "^2.0.2",
-    "webrtc2images": "^1.4.4",
     "webpack": "^1.13.1",
-    "handlebars-loader": "^1.3.0"
+    "webrtc2images": "^1.4.4"
   },
   "devDependencies": {
+    "chimp": "0.51.1",
     "standard": "11.0.1"
   }
 }
