--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "server/app",
   "scripts": {
     "build-client": "webpack --progress --colors",
-    "start": "npm run build-client && PORT=8080 node server/app.js &",
+    "start": "npm run build-client && PORT=8080 node server/start.js &",
     "stop": "kill $(lsof -t -i:8080)",
     "pretest": "npm start --silent &",
     "test": "sleep 10 && chimp --browser=phantomjs --mocha --path=test-integration",
@@ -27,8 +27,9 @@
     "handlebars-loader": "^1.3.0",
     "level": "^1.4.0",
     "level-ttl": "^3.1.0",
-    "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8",
+    "rxjs": "6.2.0",
+    "socket.io": "2.1.1",
+    "socket.io-client": "2.1.1",
     "uuid": "^2.0.2",
     "webpack": "^1.13.1",
     "webrtc2images": "^1.4.4"
