--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "socket.io": "2.1.1",
     "socket.io-client": "2.1.1",
     "uuid": "^2.0.2",
-    "webpack": "^1.13.1",
     "webrtc2images": "^1.4.4"
   },
   "devDependencies": {
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-preset-es2015": "6.24.1",
     "chimp": "0.51.1",
-    "standard": "11.0.1"
+    "standard": "11.0.1",
+    "webpack": "3.10.0"
   }
 }
