Reconfigure project to improved tooling

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,17 @@
 {
-  "extends": "standard",
+  "extends": ["standard", "prettier"],
   "env": {
     "node": true,
     "jest": true
   },
+  "plugins": ["jsdoc", "prettier"],
   "rules": {
+    "semi": "off",
     "indent": "off",
     "no-tabs": "off",
     "padded-blocks": "off",
     "operator-linebreak": "off",
     "no-magic-numbers": ["warn", { "ignore": [0, 1] }],
-    "prefer-promise-reject-errors": "warn"
+    "prefer-promise-reject-errors": "error"
   }
 }
