--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "server/start",
   "engines": {
-    "node": "8.11.3"
+    "node": "12.18.0"
   },
   "scripts": {
     "build-client": "webpack --progress --colors",
@@ -15,9 +15,10 @@
     "pretest": "npm start --silent &",
     "test": "sleep 10 && chimp --browser=phantomjs --mocha --path=test-integration",
     "posttest": "npm stop",
-    "utest": "mocha --recursive test",
+    "utest": "jest",
     "tdd": "npm run utest -- --watch",
-    "heroku-postbuild": "npm run build-client"
+    "heroku-postbuild": "npm run build-client",
+    "lint:fix": "eslint --fix ./server"
   },
   "dependencies": {
     "async": "^2.0.1",
@@ -28,20 +29,38 @@
     "express": "^4.14.0",
     "handlebars": "^4.0.5",
     "handlebars-loader": "^1.3.0",
-    "level": "^1.4.0",
-    "level-ttl": "^3.1.0",
-    "rxjs": "6.2.0",
+    "level": "^6.0.1",
+    "level-ttl": "^3.1.1",
     "socket.io": "2.1.1",
     "socket.io-client": "2.1.1",
     "uuid": "^2.0.2",
     "webrtc2images": "^1.4.4"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.4",
-    "babel-preset-es2015": "6.24.1",
-    "chimp": "0.51.1",
-    "standard": "11.0.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-jsdoc": "29.1.3",
+    "eslint-plugin-prettier": "3.1.4",
+    "husky": "4.2.5",
+    "jest": "26.1.0",
+    "jest-extended": "0.11.5",
+    "lint-staged": "10.2.11",
+    "prettier": "2.0.5",
+    "standard": "14.3.4",
+    "webdriverio": "6.4.0",
     "webpack": "3.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm t",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "eslint --fix"
+    ],
+    "*.{json}": [
+      "prettier --write"
+    ]
   }
 }
