--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "scripts": {
     "build-client": "webpack --progress --colors",
-    "start": "npm run build-client && PORT=8080 node server/start.js &",
+    "start": "npm run build-client && npm run compile && PORT=8080 node server/start.js &",
     "stop": "kill $(lsof -t -i:8080)",
     "pretest": "npm start --silent &",
     "test": "sleep 10 && chimp --browser=phantomjs --mocha --path=test-integration",
     "posttest": "npm stop",
-    "utest": "jest",
+    "utest": "jest --verbose",
     "tdd": "npm run utest -- --watch",
     "heroku-postbuild": "npm run build-client",
-    "lint:fix": "eslint --fix ./server"
+    "lint:client": "eslint --fix ./public",
+    "lint:server": "tslint --fix ./src/server",
+    "server:dev": "tsnd --respawn src/start.ts",
+    "compile": "npm run clean && npm i && tsc -p .",
+    "clean": "rm -rf server"
   },
   "dependencies": {
     "async": "^2.0.1",
@@ -37,6 +41,12 @@
     "webrtc2images": "^1.4.4"
   },
   "devDependencies": {
+    "@types/concat-stream": "1.6.0",
+    "@types/jest": "26.0.10",
+    "@types/levelup": "4.3.0",
+    "@types/level-ttl": "3.1.0",
+    "@types/node": "14.6.0",
+    "@types/uuid": "8.3.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-jsdoc": "29.1.3",
     "eslint-plugin-prettier": "3.1.4",
@@ -46,6 +56,13 @@
     "lint-staged": "10.2.11",
     "prettier": "2.0.5",
     "standard": "14.3.4",
+    "ts-jest": "26.2.0",
+    "ts-node-dev": "1.0.0-pre.58",
+    "tslint": "6.1.3",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-config-standard": "9.0.0",
+    "tslint-plugin-prettier": "2.3.0",
+    "typescript": "3.9.7",
     "webdriverio": "6.4.0",
     "webpack": "3.10.0"
   },
@@ -56,10 +73,7 @@
     }
   },
   "lint-staged": {
-    "*.{js}": [
-      "eslint --fix"
-    ],
-    "*.{json}": [
+    "*.{ts,json}": [
       "prettier --write"
     ]
   }
