--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "animate-chat",
-  "version": "0.0.1",
-  "description": "Chat en tiempo real",
+  "version": "0.0.2",
+  "description": "Real time chat with gifs",
   "author": "Juan Carlos Serrano <juancsch@gmail.com>",
   "license": "MIT",
   "main": "server/start",
@@ -16,14 +16,14 @@
     "start:server": "npm run compile && PORT=8080 bin/start.js",
     "stop": "kill $(lsof -t -i:8080)",
     "pretest:ui": "npm start --silent &",
-    "test:ui": "sleep 10 && chimp --browser=phantomjs --mocha --path=test/client/*",
+    "test:ui": "sleep 10 && wdio wdio.conf.js",
     "posttest:ui": "npm stop",
     "pretest:acceptance": "npm run start:server --silent &",
     "test:acceptance": "sleep 10 && jest --verbose --runTestsByPath test/backend/acceptance/* --detectOpenHandles",
     "posttest:acceptance": "npm stop",
     "test:integration": "jest --verbose --runTestsByPath test/backend/integration/*",
     "test:unit": "jest --verbose --runTestsByPath test/backend/unit/*",
-    "test": "npm run test:unit && npm run test:integration && npm run test:acceptance",
+    "test": "npm run test:unit && npm run test:integration && npm run test:acceptance && npm run test:ui",
     "tdd": "npm run test:unit -- --watch",
     "lint:client": "eslint --fix ./public",
     "lint:server": "tslint --fix src/backend"
@@ -52,16 +52,23 @@
     "@types/jest": "26.0.10",
     "@types/level-ttl": "3.1.0",
     "@types/levelup": "4.3.0",
+    "@types/mocha": "^8.0.3",
     "@types/nock": "11.1.0",
     "@types/node": "14.6.0",
     "@types/socket.io": "2.1.11",
     "@types/socket.io-client": "1.4.33",
     "@types/supertest": "2.0.10",
     "@types/uuid": "8.3.0",
+    "@wdio/cli": "6.4.0",
+    "@wdio/local-runner": "6.4.0",
+    "@wdio/mocha-framework": "6.4.0",
+    "@wdio/spec-reporter": "6.4.0",
+    "@wdio/sync": "6.4.0",
     "axios": "0.20.0",
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-preset-es2015": "6.24.1",
+    "chromedriver": "84.0.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-jsdoc": "29.1.3",
     "eslint-plugin-prettier": "3.1.4",
@@ -80,7 +87,7 @@
     "tslint-config-standard": "9.0.0",
     "tslint-plugin-prettier": "2.3.0",
     "typescript": "3.9.7",
-    "webdriverio": "6.4.0",
+    "wdio-chromedriver-service": "6.0.3",
     "webpack": "3.10.0"
   },
   "husky": {
