--- a/package.json
+++ b/package.json
@@ -1,104 +1,34 @@
 {
   "name": "animate-chat",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "Real time chat with gifs",
   "author": "Juan Carlos Serrano <juancsch@gmail.com>",
   "license": "MIT",
-  "main": "server/start",
   "engines": {
     "node": "12.18.0"
   },
   "scripts": {
-    "heroku:postbuild": "npm run build-client",
-    "build:client": "webpack --progress --colors",
-    "compile": "rm -rf server && tsc -p .",
-    "start": "npm run build:client && npm run start:server &",
-    "start:server": "npm run compile && PORT=8080 bin/start.js",
-    "stop": "kill $(lsof -t -i:8080)",
-    "pretest:ui": "npm start --silent &",
-    "test:ui": "sleep 10 && wdio wdio.conf.js",
-    "posttest:ui": "npm stop",
-    "pretest:acceptance": "npm run start:server --silent &",
-    "test:acceptance": "sleep 10 && jest --verbose --runTestsByPath test/backend/acceptance/* --detectOpenHandles",
-    "posttest:acceptance": "npm stop",
-    "test:integration": "jest --verbose --runTestsByPath test/backend/integration/*",
-    "test:unit": "jest --verbose --runTestsByPath test/backend/unit/*",
-    "test": "npm run test:unit && npm run test:integration && npm run test:acceptance && npm run test:ui",
-    "tdd": "npm run test:unit -- --watch",
-    "lint:client": "eslint --fix ./public",
-    "lint:server": "tslint --fix src/backend"
-  },
-  "dependencies": {
-    "async": "^2.0.1",
-    "body-parser": "1.19.0",
-    "concat-stream": "2.0.0",
-    "data-uri-to-buffer": "^0.0.4",
-    "domify": "^1.4.0",
-    "express": "4.17.1",
-    "handlebars": "^4.0.5",
-    "handlebars-loader": "^1.3.0",
-    "level": "6.0.1",
-    "level-ttl": "3.1.1",
-    "socket.io": "2.1.1",
-    "socket.io-client": "2.1.1",
-    "uuid": "^2.0.2",
-    "webrtc2images": "^1.4.4"
+    "postinstall": "run-p install:frontend install:backend",
+    "install:frontend": "cd frontend && npm install",
+    "install:backend": "cd backend && npm install",
+    "start": "run-s build:frontend start:backend",
+    "build:frontend": "npm run build --prefix frontend",
+    "start:backend": "npm start --prefix backend",
+    "test": "run-s test:frontend test:backend",
+    "test:frontend": "npm test --prefix frontend",
+    "test:backend": "npm test --prefix backend",
+    "lint:fix": "run-p lint:fix:frontend lint:fix:backend",
+    "lint:fix:frontend": "npm run lint --prefix frontend",
+    "lint:fix:backend": "npm run lint --prefix backend",
+    "heroku:postbuild": "npm run build"
   },
   "devDependencies": {
-    "@types/axios": "0.14.0",
-    "@types/body-parser": "1.19.0",
-    "@types/concat-stream": "1.6.0",
-    "@types/express": "4.17.7",
-    "@types/jest": "26.0.10",
-    "@types/level-ttl": "3.1.0",
-    "@types/levelup": "4.3.0",
-    "@types/mocha": "^8.0.3",
-    "@types/nock": "11.1.0",
-    "@types/node": "14.6.0",
-    "@types/socket.io": "2.1.11",
-    "@types/socket.io-client": "1.4.33",
-    "@types/supertest": "2.0.10",
-    "@types/uuid": "8.3.0",
-    "@wdio/cli": "6.4.0",
-    "@wdio/local-runner": "6.4.0",
-    "@wdio/mocha-framework": "6.4.0",
-    "@wdio/spec-reporter": "6.4.0",
-    "@wdio/sync": "6.4.0",
-    "axios": "0.20.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.4",
-    "babel-preset-es2015": "6.24.1",
-    "chromedriver": "84.0.1",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-jsdoc": "29.1.3",
-    "eslint-plugin-prettier": "3.1.4",
     "husky": "4.2.5",
-    "jest": "26.1.0",
-    "jest-extended": "0.11.5",
-    "lint-staged": "10.2.11",
-    "nock": "13.0.4",
-    "prettier": "2.0.5",
-    "standard": "14.3.4",
-    "supertest": "4.0.2",
-    "ts-jest": "26.2.0",
-    "ts-node-dev": "1.0.0-pre.58",
-    "tslint": "6.1.3",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-config-standard": "9.0.0",
-    "tslint-plugin-prettier": "2.3.0",
-    "typescript": "3.9.7",
-    "wdio-chromedriver-service": "6.0.3",
-    "webpack": "3.10.0"
+    "npm-run-all": "4.1.5"
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm t",
-      "pre-commit": "lint-staged"
+      "pre-push": "npm test"
     }
-  },
-  "lint-staged": {
-    "*.{ts,json}": [
-      "prettier --write"
-    ]
   }
 }
