--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "start": "npm run compile && PORT=8080 node server/start.js",
     "stop": "kill $(lsof -t -i:8080)",
     "compile": "rm -rf server && tsc -p .",
-    "lint": "tslint --fix .",
+    "lint": "tslint src/**/*.ts test/**/*.ts",
+    "lint:fix": "npm run lint -- --fix",
     "pretest:acceptance": "npm run start --silent &",
     "test:acceptance": "sleep 5 && jest --runTestsByPath test/acceptance/* --detectOpenHandles",
     "posttest:acceptance": "npm stop",
@@ -32,31 +33,27 @@
     "uuid": "^2.0.2"
   },
   "devDependencies": {
-    "@types/body-parser": "1.19.0",
-    "@types/concat-stream": "1.6.0",
-    "@types/express": "4.17.7",
-    "@types/jest": "26.0.10",
-    "@types/level-ttl": "3.1.0",
-    "@types/levelup": "4.3.0",
-    "@types/node": "14.6.0",
-    "@types/socket.io": "2.1.11",
-    "@types/socket.io-client": "1.4.33",
-    "@types/supertest": "2.0.10",
-    "@types/uuid": "8.3.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/concat-stream": "^1.6.0",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.10",
+    "@types/level-ttl": "^3.1.0",
+    "@types/levelup": "^4.3.0",
+    "@types/node": "^14.6.0",
+    "@types/socket.io": "^2.1.11",
+    "@types/socket.io-client": "^1.4.33",
+    "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "axios": "0.20.0",
     "jest": "26.4.2",
     "jest-extended": "0.11.5",
-    "lint-staged": "10.2.11",
-    "prettier": "2.0.5",
     "socket.io-client": "2.3.0",
     "standard": "14.3.4",
     "supertest": "4.0.2",
     "ts-jest": "26.2.0",
-    "ts-node-dev": "1.0.0-pre.58",
+    "ts-node": "9.0.0",
     "tslint": "6.1.3",
-    "tslint-config-prettier": "1.18.0",
     "tslint-config-standard": "9.0.0",
-    "tslint-plugin-prettier": "2.3.0",
     "typescript": "3.9.7"
   }
 }
