--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,16 +1,16 @@
 {
-  "extends": ["standard", "prettier"],
+  "extends": ["standard"],
   "env": {
-    "node": true,
-    "jest": true
+    "node": true
   },
-  "plugins": ["jsdoc", "prettier"],
+  "plugins": ["jsdoc"],
   "rules": {
-    "semi": "off",
+    "semi": ["error", "never"],
     "indent": "off",
     "no-tabs": "off",
     "padded-blocks": "off",
     "operator-linebreak": "off",
+    "arrow-parens": ["error", "as-needed"],
     "no-magic-numbers": ["warn", { "ignore": [0, 1] }],
     "prefer-promise-reject-errors": "error"
   }
