--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
   },
   "scripts": {
     "build": "webpack --progress --colors",
+    "lint": "eslint ./src ./test",
+    "lint:fix": "npm run lint -- --fix",
     "pretest": "serve -l 8080 public &",
     "test": "wdio wdio.conf.js",
-    "posttest": "kill $(lsof -t -i:8080)",
-    "lint": "eslint --fix"
+    "posttest": "kill $(lsof -t -i:8080)"
   },
   "dependencies": {
     "domify": "1.4.0",
@@ -24,6 +25,7 @@
     "webrtc2images": "^1.4.4"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.23.0",
     "@wdio/cli": "6.4.0",
     "@wdio/local-runner": "6.4.0",
     "@wdio/mocha-framework": "6.4.0",
@@ -33,10 +35,7 @@
     "babel-loader": "7.1.4",
     "babel-preset-es2015": "6.24.1",
     "chromedriver": "84.0.1",
-    "eslint-config-prettier": "6.11.0",
     "eslint-plugin-jsdoc": "29.1.3",
-    "eslint-plugin-prettier": "3.1.4",
-    "prettier": "2.0.5",
     "serve": "11.3.2",
     "standard": "14.3.4",
     "wdio-chromedriver-service": "6.0.3",
