--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ notifications:
       - juancsch@gmail.com
     on_success: change
     on_failure: always
+before_install:
+  - pip install --user codecov
+after_success:
+  - codecov --file backend/coverage/lcov.info --disable search
