--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "lint": "tslint src/**/*.ts test/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "pretest:acceptance": "npm run start --silent &",
-    "test:acceptance": "sleep 5 && jest --runTestsByPath test/acceptance/* --detectOpenHandles",
+    "test:acceptance": "sleep 5 && jest --coverage --coverageDirectory=coverage/acceptance --runTestsByPath test/acceptance/* --detectOpenHandles",
     "posttest:acceptance": "npm stop",
-    "test:integration": "jest --runTestsByPath ./test/integration/*",
-    "test:unit": "jest --runTestsByPath ./test/unit/*",
+    "test:integration": "jest --runTestsByPath --coverage --coverageDirectory=coverage/integration ./test/integration/*",
+    "test:unit": "jest --runTestsByPath --coverage --coverageDirectory=coverage/unit ./test/unit/*",
+    "pretest": "rm -rf coverage",
     "test": "npm run test:unit && npm run test:integration && npm run test:acceptance",
+    "posttest": "npx istanbul-merge --out coverage/coverage.json coverage/unit/coverage-final.json coverage/integration/coverage-final.json coverage/acceptance/coverage-final.json && npx istanbul report --include coverage/coverage.json --dir coverage lcov",
     "tdd": "npm run test:unit -- --watch"
   },
   "dependencies": {
@@ -45,6 +47,8 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "axios": "0.20.0",
+    "istanbul": "^0.4.5",
+    "istanbul-merge": "^1.1.1",
     "jest": "26.4.2",
     "jest-extended": "0.11.5",
     "socket.io-client": "2.3.0",
