--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "serve": "11.3.2",
     "standard": "14.3.4",
     "wdio-chromedriver-service": "6.0.3",
-    "webpack": "3.10.0"
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12"
   }
 }
